--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 <body>
 
     <div class = "content" >
+    <div class= "container">
+        <h1> Discover your Akan Name</h1>
+        <p>The African Spririt</p>
+
+    </div>
     
-        <h1> Find your <strong> Akan Name!</strong></h1>
+        <h2> Find your <strong> Akan Name!</strong></h2>
         <p>The Akans have a very unique naming system! It is based on the day a child is born, and on the gender of the child. Akan names are derived from Ghanian culture <br> For instance a boy born on a Monday would be named Kwadwo or Koho, and a girl would be called Adwoa. Each day has one or more variants, but there's usually not much to choose from. </p>
             
         <p> The Akans may also have a middle name which is based on a quality, trait, family member or something else. There are some names in this generator which are part of this system, most noticeably the names related to where and/or how the birth took place.
